# aurora

./: .gitignore  README.md  package-lock.json  package.json
client/: eslint.config.js  package-lock.json  package.json  prettier.config.js
client/src/: App.css  App.jsx  Countdown.css  Countdown.jsx  Monitoring.css  Monitoring.jsx  Proof.jsx  Results.css  Results.jsx  ResultsChart.css  ResultsChart.jsx  Start.css  Start.jsx  Webcam.css  Webcam.jsx  constants.js  index.css
server/: Dockerfile  README.md  main.py  pyproject.toml
server/server/: analyzer.py  tester.py
