[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Objectivitix <79152594+Objectivitix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.15"
opencv-contrib-python = "^4.10.0.84"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
